#pragma once

#include "iTireCompound.h"

class SlickTire : public ITireCompound
{
protected:
    float optimalTempWindow;
};
