@startuml tireStrategySimDiagram
skinparam classAttributeIconSize 0
skinparam monochrome true

class TrackEnvironment <<Singleton>> {
  - float trackTemperature
  - float timeOfDayHours
  - bool isNightTime
  - float currentWetness
  - int rainIntensity
  - int remainingRainLaps
  - TrackEnvironment()
  
  + static TrackEnvironment& getInstance()
  + float getTrackTemp()
  + bool checkIsNight()
  + float getCurrentWetness()
  + int getRainIntensity()
  + int getRemainingRainLaps()
  + void setRainLaps(int minRainLaps, int maxRainLaps)
  + void updateWeather()
  + void advanceTime(float hours)
}

abstract class ITireCompound {
  + ~ITirecompound()
  + virtual float calculateGrip(float lapsCompleted) = 0
  + virtual void printStatus() = 0
  + virtual string getName() = 0
  + virtual float getWear() = 0
}

class WetTire {
  - float currentWear
  - string compoundName
  - float waterDisplacementRate

  + string getName() override
  + float getWear() override
  + float calculateGrip(int lapsCompleted) override
  + void printStatus() override
}

class SlickTire {
  # float optimalTempWindow
}

class SoftCompound {
  - float currentWear
  - string compoundName
  - float blisteringFactor

  + SoftCompound()
  + string getName() override
  + float getWear() override
  + float calculateGrip(int lapsCompleted) override
  + void printStatus() override
}

class HardCompound {
  - float currentWear
  - string compoundName
  - float warmUpTime

  + HardCompound()
  + string getName() override
  + float getWear() override
  + float calculateGrip(int lapsCompleted) override
  + void printStatus() override
}

class RaceCar {
  - string teamName
  - float fuelTankCapacity
  - float currentFuel
  - int currentStintLaps
  - ITireCompound* currentTires
  - vector<ITireCompound*> usedTires
  - bool isDNF
  - int lapsCompleted
  - float totalRaceTime

  + RaceCar()
  + ~RaceCar()
  + std::string getTeamName()
  + float getFuelTankCapacity()
  + float getCurrentFuel()
  + int getCurrentStintLaps()
  + ITireCompound *getCurrentTires()
  + int getTireUsageCount(std::string tireName)
  + bool getIsDNF()
  + int getLapsCompleted()
  + float getTotalRaceTime()
  + void executePitStop(float fuelAmount)
  + void executePitStop(float fuelAmount, ITireCompound* newTires)
  + float completeLap()
}

class EnduranceSimulation {
  - vector<RaceCar*> grid
  - float currentRaceHours
  - float totalRaceHours
  
  + EnduranceSimulation()
  + ~EnduranceSimulation()
  + void start24hRace()
}

ITireCompound <|-- WetTire
ITireCompound <|-- SlickTire
SlickTire <|-- SoftCompound
SlickTire <|-- HardCompound

RaceCar o-- ITireCompound : "Polymorfní kompozice"
EnduranceSimulation *-- RaceCar : "Kompozice (obsahuje grid)"
TrackEnvironment <-- ITireCompound : "Závislost (čte teplotu)"
TrackEnvironment <-- EnduranceSimulation : "Závislost (řídí 24h čas)"
@enduml